@@ -15,6 +15,7 @@ enum cmd_error_t {
 struct argmap {
     char *arggroup;
     struct queue_t *argvals;
+    int argvalcnt;
 };
 
 struct cmd_args_t {
@@ -24,6 +25,7 @@ struct cmd_args_t {
 
 struct cmd_args_t *parse_and_create_args(char *, const char *, const char **,
         int, int, char **);
+struct cmd_args_t *argdup(struct cmd_args_t *);
 char *argcopy(struct cmd_args_t *, const char *);
 void argins(struct cmd_args_t *, const char *, char *);
 void argfree(struct cmd_args_t *);
